# yokaidouchuuki

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  dict.txt  rust-toolchain.toml
config/: config.toml
src/: backward.rs  bitset.rs  bruteforce.rs  config.rs  cpu.rs  dict.rs  domain.rs  enumeration.rs  forward1.rs  forward2.rs  main.rs  opt.rs  pruning.rs  skk.rs  target.rs  time.rs
