[package]
name = "decrypt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
itertools = "0.10.3"
num_cpus = "1.13.1"
once_cell = "1.9.0"
packed_simd_2 = { version = "0.3.6", features = ["into_bits"] }
rayon = "1.5.1"
serde = { version = "1.0.132", features = ["derive"] }
spin = { version = "0.9.2", features = ["rwlock"] }

[dev-dependencies]
rand = "0.8.4"

# [profile.release]
# debug = 1
